# agent-runtime

./: .dockerignore  .env.example  .gitignore  Dockerfile  adf_mcp_server.py  docker-compose.yml  local.sh  mcp.json  pyproject.toml  s_merged.py
.agent_settings_example/: mcp_example.json
agent_frontend/: Dockerfile  README.md  pyproject.toml  run.py  server.py
agent_frontend/agent_frontend/: engine.py  schemas.py
agent_frontend/agent_frontend/cli/: app.py  display.py  formatters.py
agent_frontend/agent_frontend/web/: run.py  server.py
agent_frontend/agent_frontend/web/static/: index.html  script.js  styles.css
agent_frontend/static/: index.html  script.js  styles.css
agent_frontend/storage/: __init__.py  base.py  local.py  manager.py  postgres.py
agent_runtime/: __main__.py  background.py  compression.py  config.py  engine.py  hooks.py  loop.py  mcp_client.py  sandbox.py  session.py  skills.py  subagent.py  tasks.py  todo.py  tools.py  tracking.py
agent_runtime/api/: __init__.py  app.py  deps.py  schemas.py
agent_runtime/api/routes/: chat.py  confirm.py  meta.py  sessions.py
agent_runtime/core/: __init__.py  compression.py  config.py  hooks.py  loop.py  mcp_client.py  session.py  todo.py  tools.py
agents/: README.md  base.Dockerfile
agents/adf-agent/: Dockerfile  compose.yml  pyproject.toml
agents/adf-agent/mcp/: adf_mcp_server.py
agents/adf-agent/prompts/: system.md
agents/adf-agent/settings/: HITL.json  auth.json  mcp.json
agents/adf-agent/skills/find-pipelines-by-service/: SKILL.md
auth/: __init__.py  cache.py  config.py  context.py  contextual.py  device_flow.py  easyauth.py  identity.py  middleware.py
auth/providers/: __init__.py  _aad_device.py  ado_device.py  azure_device.py  azure_service.py  base.py  registry.py  snowflake_device.py
doc/: auth-flow.md  auth-v1-status.md  compression.md  design.md  docker-setup.md  follow-ups.md  langsmith-integration.md  mi-device-code-auth.md  storage.md  stress-test-observations.md
doc/Conversation History/: 0ad21bd9-cdda-483f-b7a2-b3fc854f6aa6.html
prompt/: prompt-1-foundation.md  prompt-2-rich-cli.md  prompt-3-web-frontend.md  prompt-4-adf-integration.md  prompt-all-phases.md  prompt-overview.md
skills/adf-overview/: SKILL.md
skills/test-linked-service/: SKILL.md
tests/: conftest.py  test_api.py  test_api_streaming.py  test_auth.py  test_auth_device_flow.py  test_auth_middleware.py  test_auth_providers.py  test_auth_snowflake_ado.py  test_confirm_registry.py  test_hooks.py  test_integration.py  test_loop_helpers.py  test_skills.py  test_todo.py  test_tools.py  test_tracking.py
tests/stress/: README.md  stress_chat_concurrent.py
