[project]
name = "agent-runtime"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "mcp>=1.26.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["agent_frontend"]

[tool.uv.sources]
agent-runtime = { workspace = true }
agent-frontend = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
