[project]
name = "agent-runtime"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "mcp>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Install with: uv sync --extra test
# Run with:    uv run --extra test pytest
test = [
    "pytest>=9.0.2",
    "httpx>=0.27",            # FastAPI TestClient
    "asgi-lifespan>=2.1",     # async lifespan trigger for AsyncClient + ASGITransport
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["agent_frontend"]

[tool.uv.sources]
agent-runtime = { workspace = true }
agent-frontend = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
]
