[project]
name = "agent-runtime"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "mcp>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Install with: uv sync --extra test
# Run with:    uv run --extra test pytest
test = [
    "pytest>=9.0.2",
    "httpx>=0.27",            # FastAPI TestClient
    "asgi-lifespan>=2.1",     # async lifespan trigger for AsyncClient + ASGITransport
]

# The web UI ships as a sibling package (agent_frontend) at repo root. It's
# an optional extra so runtime-only deploys stay lean.
# Install with: uv sync --extra frontend
# Launch with:  uv run agent-web
frontend = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
]
# Add when using Postgres backend:
# uv sync --extra frontend --extra frontend-postgres
frontend-postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
agent-web = "agent_frontend.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Both packages ship in the same wheel — they're sibling Python packages at
# the repo root, not a workspace with separate members.
[tool.hatch.build.targets.wheel]
packages = ["agent_runtime", "agent_frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
]
