[project]
name = "agent-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-runtime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
cli = ["rich>=13.0", "prompt-toolkit>=3.0"]
web = ["fastapi>=0.115", "uvicorn>=0.34", "sse-starlette>=2.0"]
all = ["agent-frontend[cli,web]"]

[project.scripts]
agent-cli = "agent_frontend.cli.app:main"
agent-web = "agent_frontend.web.run:main"

[tool.uv.sources]
agent-runtime = { workspace = true }
